@@ -169,12 +169,12 @@ class BinaryDocValuesFieldUpdates extends DocValuesFieldUpdates {
   @Override
   public void merge(DocValuesFieldUpdates other) {
     BinaryDocValuesFieldUpdates otherUpdates = (BinaryDocValuesFieldUpdates) other;
-    int newSize = size  + otherUpdates.size;
-    if (newSize > Integer.MAX_VALUE) {
+    if (otherUpdates.size > Integer.MAX_VALUE - size) {
       throw new IllegalStateException(
           "cannot support more than Integer.MAX_VALUE doc/value entries; size="
               + size + " other.size=" + otherUpdates.size);
     }
+    final int newSize = size  + otherUpdates.size;
     docs = docs.grow(newSize);
     offsets = offsets.grow(newSize);
     lengths = lengths.grow(newSize);
